--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,8 +34,11 @@ jobs:
 
       - name: Install just
         run: |
-          curl --proto '=https' --tlsv1.2 -sSf \
-            https://just.systems/install.sh | sudo bash -s -- --to /usr/local/bin
+          JUST_VERSION="1.46.0"
+          JUST_BASE="https://github.com/casey/just/releases/download"
+          JUST_TAR="just-${JUST_VERSION}-x86_64-unknown-linux-musl.tar.gz"
+          curl -fsSL "${JUST_BASE}/${JUST_VERSION}/${JUST_TAR}" | tar xz -C /tmp
+          sudo mv /tmp/just /usr/local/bin/
 
       - name: Install rumdl
         run: |
